--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,7 @@ body{
   background-color: white;
   border-color: #285942;
   border-style: solid;
-  border-width: 0.5%;
+  border-width: thin;
   margin: 3px;
   padding: 5px;
   border-radius: .25rem;
