--- a/src/index.css
+++ b/src/index.css
@@ -57,9 +57,18 @@ body{
 
 /* ~~~~~~~~Home Page Specific~~~~~~~~ */
 
-.bounded{
-  max-width: 45vw;
-  margin-left: 27.5vw;
+@media screen and (min-width: 600px) {
+  .bounded{
+    max-width: 45vw;
+    margin-left: 27.5vw;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .bounded{
+    max-width: 60vw;
+    margin-left: 20vw;
+  }
 }
 
 .skillTitle{
