--- a/src/index.css
+++ b/src/index.css
@@ -57,14 +57,14 @@ body{
 
 /* ~~~~~~~~Home Page Specific~~~~~~~~ */
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 1200px) {
   .bounded{
     max-width: 45vw;
     margin-left: 27.5vw;
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1200px) {
   .bounded{
     max-width: 60vw;
     margin-left: 20vw;
@@ -104,9 +104,18 @@ body{
 
 /* ~~~~~~~~About Page Specific~~~~~~~~ */
 
-.bounded2{
-  max-width: 55vw;
-  margin-left: 20vw;
+@media screen and (min-width: 750px) {
+  .bounded2{
+    max-width: 55vw;
+    margin-left: 22.5vw;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .bounded2{
+    max-width: 80vw;
+    margin-left: 10vw;
+  }
 }
 
 .visitor{
